# invar

./: .envrc  .gitignore  Cargo.toml  Justfile  LICENSE  README.md  flake.nix  rust-toolchain.toml
.cargo/: config.toml
crates/invar/: Cargo.toml
crates/invar-component/: Cargo.toml
crates/invar-component/src/: lib.rs  runtime.rs  tag.rs
crates/invar-pack/: Cargo.toml
crates/invar-pack/src/: lib.rs  settings.rs
crates/invar-pack/src/index/: mod.rs  overrides.rs
crates/invar-pack/src/instance/: mod.rs  version.rs
crates/invar-repository/: Cargo.toml
crates/invar-repository/src/: lib.rs
crates/invar-repository/src/git/: mod.rs
crates/invar-repository/src/local/: mod.rs  persist.rs
crates/invar-repository/src/modrinth/: mod.rs  models.rs
crates/invar-repository/tests/: repository.rs
crates/invar-server/: Cargo.toml
crates/invar-server/src/: backup.rs  docker_compose.rs  lib.rs
crates/invar/src/: cli.rs  main.rs
shells/default/: default.nix
src/: cli.rs  component.rs  lib.rs  server.rs
src/cli/: cli.rs  main.rs
src/component/: mod.rs  modrinth.rs  tag.rs
src/index/: mod.rs
src/index/component/: hashes.rs  mod.rs  requirement.rs
src/index/file/: env.rs  hashes.rs  mod.rs
src/instance/: mod.rs
src/local_storage/: mod.rs
src/pack/: mod.rs  settings.rs
src/server/: backup.rs  docker_compose.rs  mod.rs
