cargo-features = ["codegen-backend"]

[workspace]
resolver = "2"
members = [
    "crates/invar",
    "crates/invar-component",
    "crates/invar-pack",
    "crates/invar-repository",
    "crates/invar-server",
]

[profile.dev]
codegen-units = 512
codegen-backend = "cranelift"

[profile.release]
debug = "full"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = "warn"
nursery = "warn"
complexity = "warn"
perf = "warn"
enum_glob_use = { level = "warn", priority = 1 }
single_match_else = { level = "allow", priority = 1 }
option_if_let_else = { level = "allow", priority = 1 }
or_fun_call = { level = "allow", priority = 1 }
match_bool = { level = "allow", priority = 1 }
