cargo-features = ["codegen-backend"]

[workspace]
resolver = "2"
members = [
    "crates/invar",
    "crates/invar-component",
    "crates/invar-pack",
    "crates/invar-repository",
    "crates/invar-server",
]

[profile.dev]
codegen-units = 512
codegen-backend = "cranelift"

[profile.release]
debug = "full"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = "warn"
nursery = "warn"
complexity = "warn"
perf = "warn"
enum_glob_use = { level = "warn", priority = 1 }
single_match_else = { level = "allow", priority = 1 }
option_if_let_else = { level = "allow", priority = 1 }
or_fun_call = { level = "allow", priority = 1 }
match_bool = { level = "allow", priority = 1 }

[workspace.dependencies]
bon = "3.6.0"
git2 = "0.20.2"
itertools = "0.14.0"
serde_json = "1.0.140"
strum = { version = "0.27.1", features = ["derive"] }
zip = "4.1.0"
