cargo-features = ["codegen-backend"]

[workspace]
resolver = "2"
members = [
    "crates/invar",
    "crates/invar-component",
    "crates/invar-pack",
    "crates/invar-repository",
    "crates/invar-server",
]

[workspace.package]
edition = "2024"
version = "0.6.0"
authors = ["mxxntype <59417007+mxxntype@users.noreply.github.com>"]
description = "CLI management tool for modded Minecraft servers"
repository = "https://github.com/exoumoon/invar"
license-file = "./LICENSE"

[profile.dev]
codegen-units = 256
codegen-backend = "cranelift"

[profile.release]
debug = "full"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = "warn"
nursery = "warn"
complexity = "warn"
perf = "warn"
enum_glob_use = { level = "warn", priority = 1 }
single_match_else = { level = "allow", priority = 1 }
option_if_let_else = { level = "allow", priority = 1 }
or_fun_call = { level = "allow", priority = 1 }
match_bool = { level = "allow", priority = 1 }

[workspace.dependencies]
bon = "3.6.0"
chrono = { version = "0.4.41", features = ["now", "serde"] }
clap = { version = "4.5.17", features = ["derive", "color"] }
clap_complete = "4.5.42"
clap_complete_nushell = "4.5.5"
color-eyre = "0.6.3"
copy_dir = "0.1.3"
eyre = "0.6.12"
git2 = "0.20.2"
heck = "0.5.0"
indoc = "2.0.5"
inquire = "0.7.5"
itertools = "0.14.0"
nutype = { version = "0.6.2", features = ["serde"] }
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
rstest = "0.24.0"
semver = { version = "1.0.23", features = ["serde"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.140"
serde_with = { version = "3.12.0", features = ["hex"] }
serde_yml = "0.0.12"
spinach = "3.1.0"
strum = { version = "0.27.1", features = ["derive"] }
tempdir = "0.3.7"
thiserror = "2.0.11"
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
url = { version = "2.5.2", features = ["serde"] }
walkdir = "2.5.0"
zip = "4.1.0"

[workspace.dependencies.docker-compose-types]
version = "0.19.0"
default-features = false
features = ["yml"]
