[package]
name = "invar-component"
description.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
clap = { version = "4.5.26", features = ["derive"] }
nutype = { version = "0.5.1", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_with = { version = "3.12.0", features = ["hex"] }
strum.workspace = true
url = { version = "2.5.4", features = ["serde"] }

[lints]
workspace = true

[dev-dependencies]
eyre = "0.6.12"
serde_yml = "0.0.12"
