[package]
name = "invar-component"
description.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
clap.workspace = true
nutype.workspace = true
serde.workspace = true
serde_with.workspace = true
strum.workspace = true
url.workspace = true

[lints]
workspace = true

[dev-dependencies]
eyre.workspace = true
serde_yml.workspace = true
