[package]
name = "invar-pack"
description.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
bon.workspace = true
clap = { version = "4.5.26", features = ["derive"] }
invar-component = { path = "../invar-component" }
semver = { version = "1.0.24", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json.workspace = true
strum.workspace = true
thiserror = "2.0.11"
url = { version = "2.5.4", features = ["serde"] }
zip.workspace = true

[dev-dependencies]
rstest = "0.24.0"
color-eyre = "0.6.3"

[lints]
workspace = true
