[package]
name = "invar-pack"
description.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
bon.workspace = true
clap.workspace = true
invar-component = { version = "0.6.0", path = "../invar-component" }
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
thiserror.workspace = true
url.workspace = true
zip.workspace = true

[dev-dependencies]
rstest.workspace = true
color-eyre.workspace = true

[lints]
workspace = true
