[package]
name = "invar-repository"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
color-eyre = "0.6.3"
eyre = "0.6.12"
git2.workspace = true
invar-component = { version = "0.1.0", path = "../invar-component" }
invar-pack = { version = "0.6.0", path = "../invar-pack" }
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
semver = { version = "1.0.24", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_yml = "0.0.12"
strum.workspace = true
thiserror = "2.0.11"
url = { version = "2.5.4", features = ["serde"] }
walkdir = "2.5.0"

[dev-dependencies]
rstest = "0.24.0"
tempdir = "0.3.7"

[lints]
workspace = true
