[package]
name = "invar-repository"
description.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
chrono.workspace = true
color-eyre.workspace = true
git2.workspace = true
invar-component = { version = "0.6.0", path = "../invar-component" }
invar-pack = { version = "0.6.0", path = "../invar-pack" }
reqwest.workspace = true
semver.workspace = true
serde.workspace = true
serde_yml.workspace = true
strum.workspace = true
thiserror.workspace = true
url.workspace = true
walkdir.workspace = true

[dev-dependencies]
rstest.workspace = true
tempdir.workspace = true

[lints]
workspace = true
