[package]
name = "invar-server"
description.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
bon.workspace = true
docker-compose-types.workspace = true
git2.workspace = true
indoc.workspace = true
invar-pack.workspace = true
invar-repository.workspace = true
serde.workspace = true
strum.workspace = true
thiserror.workspace = true
tracing.workspace = true

[lints]
workspace = true
