[package]
name = "invar"
description.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
clap.workspace = true
clap_complete.workspace = true
clap_complete_nushell.workspace = true
color-eyre.workspace = true
inquire.workspace = true
invar-component.workspace = true
invar-pack.workspace = true
invar-repository.workspace = true
invar-server.workspace = true
itertools.workspace = true
semver.workspace = true
serde_yml.workspace = true
spinach.workspace = true
strum.workspace = true
tracing.workspace = true
tracing-error.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
